tooling/nargo_cli/tests/snapshots/compile_failure/assert_eq_struct/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: No matching impl found for `myStruct: Eq`
  ┌─ src/main.nr:4:15
  │
4 │     assert_eq(x, y);
  │               ---- No impl for `myStruct: Eq`
  │

Aborting due to 1 previous error
