tooling/nargo_cli/tests/snapshots/compile_failure/assert_eq_struct/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: No matching impl found for `myStruct: Eq`
  ┌─ src/main.nr:4:15
  │
4 │     assert_eq(x, y);
  │               ---- No impl for `myStruct: Eq`
  │

Aborting due to 1 previous error
